# tracer-advection

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: misspell.yml  test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
notebooks/: 2022-01-03-tracer-section-hovmoeller-monthly-data.ipynb  2022-01-03-tracer-section-hovmoeller-monthly-data.py
src/ess_tracer_transit/: version.py
src/tracer_transit/: version.py
tests/test_version/: test_version.py
